--- a/_sass/minimal-mistakes/_sidebar.scss
+++ b/_sass/minimal-mistakes/_sidebar.scss
@@ -125,10 +125,16 @@
     width: auto;
     height: auto;
   }
-
+  .image-cropper {
+    width: 100px;
+    height: 100px;
+    position: relative;
+    overflow: hidden;
+    border-radius: 50%;
+  }
+  
   img {
     max-width: 110px;
-    border-radius: 50%;
 
     @include breakpoint($large) {
       padding: 5px;
