--- a/_sass/minimal-mistakes/_variables.scss
+++ b/_sass/minimal-mistakes/_variables.scss
@@ -39,8 +39,8 @@ $type-size-2: 1.953em !default; // ~31.248px */
 $type-size-1: 1.563em !default; // ~25.008px
 $type-size-2: 1.25em !default; // ~20px
 $type-size-3: 1em !default; // ~16px
-$type-size-4: 
-$type-size-5: 
+$type-size-4: 0.75em !default; // ~12px
+$type-size-5: 0.6875em !default; // ~11px
 $type-size-6: 0.625em !default; // ~10px
 $type-size-7: 0.5625em !default; // ~9px
 $type-size-8: 0.5em !default; // ~8px
